Совместимость с JDK17+, Gradle 9.7.0, оптимизации